<!--
  ~ Copyright (c) 2015. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<resources>
    <string name="app_name">ExampleStudent</string>
    <string name="txtFormRegister">Hồ sơ đăng ký sinh viên</string>
    <string name="txtName">Họ tên:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtGender">Giới tính:</string>
    <string name="txtPhone">Số điện thoại:</string>
    <string name="txtMajor">Ngành học:</string>
    <string name="txtAvatar">Hình ảnh:</string>
    <string name="edtNameHint">Nguyễn Vĩnh Tiến</string>
    <string name="edtEmailHint">tien.workinfo@gmail.com</string>
    <string name="rdbMale">Nam</string>
    <string name="rdbFemale">Nữ</string>
    <string name="edtPhoneHint">0908881066</string>
    <string name="edtMajorHint">Công nghệ thông tin</string>
    <string name="edtAvatarHint">Hình ảnh(Địa chỉ URL)</string>
    <string name="btnSubmit">Đăng ký</string>
    <string name="btnList">Danh sách</string>
    <string name="txtImageDescription">Hình ảnh</string>
</resources>
